fix: app responsiveness issues, now works on small width devices

--- a/src/components/MenuBox/MenuBox.module.css
+++ b/src/components/MenuBox/MenuBox.module.css
@@ -4,8 +4,8 @@
     display: flex;
     flex-grow: 1;
     background-color: #9cacd5;
-    max-height: 400px;
     margin-top: auto;
+    flex-wrap: wrap;
 }
 .box p {
     margin: 0;
