--- a/src/components/MenuOption/MenuOption.module.css
+++ b/src/components/MenuOption/MenuOption.module.css
@@ -8,6 +8,7 @@
     padding: 1.8rem;
     text-align: justify;
     border-radius: 20px;
+    min-width: 150px;
 }
 .title {
     margin: 0.5rem 0.5rem 1.5rem 0.5rem;
