--- a/src/components/Piano/Piano.module.css
+++ b/src/components/Piano/Piano.module.css
@@ -1,10 +1,11 @@
 .piano {
     display: flex;
     max-width: 80%;
+    min-height: 400px;
     overflow: hidden;
     cursor: grab;
     border-radius: 10px;
-    margin-top: auto;
-    margin-bottom: 30px;
+    margin-top: 60px;
+    margin-bottom: 80px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
