--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 html, body, #root {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 }
